--- a/.classpath
+++ b/.classpath
@@ -3,19 +3,19 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="LIBS/box2dlights-1.5-SNAPSHOT-sources.jar"/>
-	<classpathentry kind="lib" path="LIBS/box2dlights-1.5-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="LIBS/gdx-backend-lwjgl-natives.jar"/>
-	<classpathentry kind="lib" path="LIBS/gdx-backend-lwjgl.jar"/>
-	<classpathentry kind="lib" path="LIBS/gdx-box2d-natives.jar"/>
-	<classpathentry kind="lib" path="LIBS/gdx-box2d.jar"/>
-	<classpathentry kind="lib" path="LIBS/gdx-freetype-natives.jar"/>
-	<classpathentry kind="lib" path="LIBS/gdx-freetype-sources.jar"/>
-	<classpathentry kind="lib" path="LIBS/gdx-freetype.jar"/>
-	<classpathentry kind="lib" path="LIBS/gdx-natives.jar"/>
-	<classpathentry kind="lib" path="LIBS/gdx-setup.jar"/>
-	<classpathentry kind="lib" path="LIBS/gdx-tools-sources.jar"/>
-	<classpathentry kind="lib" path="LIBS/gdx-tools.jar"/>
-	<classpathentry kind="lib" path="LIBS/gdx.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Baptiste/Desktop/CODE/Java/LIBS/box2dlights-1.5-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Baptiste/Desktop/CODE/Java/LIBS/box2dlights-1.5-SNAPSHOT-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Baptiste/Desktop/CODE/Java/LIBS/gdx.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Baptiste/Desktop/CODE/Java/LIBS/gdx-backend-lwjgl.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Baptiste/Desktop/CODE/Java/LIBS/gdx-backend-lwjgl-natives.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Baptiste/Desktop/CODE/Java/LIBS/gdx-box2d.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Baptiste/Desktop/CODE/Java/LIBS/gdx-box2d-natives.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Baptiste/Desktop/CODE/Java/LIBS/gdx-freetype.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Baptiste/Desktop/CODE/Java/LIBS/gdx-freetype-natives.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Baptiste/Desktop/CODE/Java/LIBS/gdx-freetype-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Baptiste/Desktop/CODE/Java/LIBS/gdx-natives.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Baptiste/Desktop/CODE/Java/LIBS/gdx-setup.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Baptiste/Desktop/CODE/Java/LIBS/gdx-tools.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Baptiste/Desktop/CODE/Java/LIBS/gdx-tools-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
